Closed Bug 1316530 Opened 9 years ago Closed 9 years ago

Pass WebGL2 conformance deqp/functional/gles3/framebufferblit

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: ethlin, Assigned: jgilbert)

Details

Attachments

(1 file)

We have these failures: failed: blit.conversion.rgba8_to_rgba32f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_rgba16f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_r11f_g11f_b10f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_rg32f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_rg16f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_r32f: glError: INVALID_OPERATION failed: blit.conversion.rgba8_to_r16f: glError: INVALID_OPERATION
https://www.khronos.org/opengles/sdk/docs/man3/html/glBlitFramebuffer.xhtml says: GL_INVALID_OPERATION is generated if mask contains GL_COLOR_BUFFER_BIT and any of the following conditions hold: The read buffer contains fixed-point or floating-point values and any draw buffer contains neither fixed-point nor floating-point values. The read buffer contains unsigned integer values and any draw buffer does not contain unsigned integer values. The read buffer contains signed integer values and any draw buffer does not contain signed integer values. It looks like we should return INVALID_OPERATION when detecting integer to float.
Comment on attachment 8810696 [details] Bug 1316530 - Normalized int/uint count as fixed, and should be treated like floats in BlitFramebuffer. - https://reviewboard.mozilla.org/r/92982/#review92932
Attachment #8810696 - Flags: review?(ethlin) → review+
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/510d3ebfd1f6 Normalized int/uint count as fixed, and should be treated like floats in BlitFramebuffer. - r=ethlin
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee: ethlin → jgilbert
Comment on attachment 8810696 [details] Bug 1316530 - Normalized int/uint count as fixed, and should be treated like floats in BlitFramebuffer. - Approval Request Comment [Feature/regressing bug #]: webgl2 [User impact if declined]: [Describe test coverage new/current, TreeHerder]: [Risks and why]: [String/UUID change made/needed]:
Attachment #8810696 - Flags: approval-mozilla-beta?
Attachment #8810696 - Flags: approval-mozilla-aurora?
Comment on attachment 8810696 [details] Bug 1316530 - Normalized int/uint count as fixed, and should be treated like floats in BlitFramebuffer. - Fix WebGL 2 issue. Beta51+ and Aurora52+. Should be in 51 beta 3.
Attachment #8810696 - Flags: approval-mozilla-beta?
Attachment #8810696 - Flags: approval-mozilla-beta+
Attachment #8810696 - Flags: approval-mozilla-aurora?
Attachment #8810696 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: