Bug 1316530 - Normalized int/uint count as fixed, and should be treated like floats in BlitFramebuffer. r=ethlin, a=gchang

MozReview-Commit-ID: FBV0qTDk4pS